samples/_failures_safe/1761715742_357255_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_248a4b93.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_248a4b93.c:150:13: error: ‘str’ undeclared (first use in this function)
  150 |             str
      |             ^~~
./samples/SAFE/__tmp_248a4b93.c:150:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_248a4b93.c:150:16: error: expected ‘;’ at end of input
  150 |             str
      |                ^
      |                ;
./samples/SAFE/__tmp_248a4b93.c:150:13: error: expected declaration or statement at end of input
  150 |             str
      |             ^~~
./samples/SAFE/__tmp_248a4b93.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_248a4b93.c:150:13: error: expected declaration or statement at end of input
